--- a/config/agent/wcsac.yaml
+++ b/config/agent/wcsac.yaml
@@ -11,12 +11,12 @@ agent:
     actor_cfg: ${diag_gaussian_actor}
     discount: 0.99
     init_temperature: 0.6931
-    alpha_lr: ${lr}
+    alpha_lr: 1e-3
     alpha_betas: [0.9, 0.999]
-    actor_lr: ${lr}
+    actor_lr: 1e-3
     actor_betas: [0.9, 0.999]
     actor_update_frequency: 1
-    critic_lr: ${lr}
+    critic_lr: 1e-3
     critic_betas: [0.9, 0.999]
     critic_tau: 0.005
     critic_target_update_frequency: 2
