--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,10 +1,7 @@
 defaults:
-    - agent: wcsacp
+    - agent: wcsac
 
 env: 'point_goal_1'
-# env: 'cheetah_run'
-# env: 'custom_static'
-# env: 'custom_dynamic'
 
 # this needs to be specified manually
 experiment: exp
@@ -14,7 +11,7 @@ replay_buffer_capacity: 1e6
 
 num_seed_steps: 5000
 
-eval_frequency: 30000
+eval_frequency: 20000
 num_eval_episodes: 20
 
 device: cuda
@@ -26,14 +23,10 @@ log_save_tb: true
 # video recorder
 save_video: true
 
-
 seed: -1
 risk_level: 2
-lr: 1e-3
 
 restart_path: dummy
-epsilon: 0.1
-smooth_lambda: 0.01
 
 # hydra configuration
 hydra:
