--- a/config/train.yaml
+++ b/config/train.yaml
@@ -27,6 +27,9 @@ seed: -1
 risk_level: 2
 
 restart_path: dummy
+# policy smoothing params
+epsilon: 0.001
+smooth_lambda: 1
 
 # hydra configuration
 hydra:
